--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,15 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+  chess-server:
+    image: chess-server:latest
+    build:
+      context: ./chess-server
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8080"
+    environment:
+      - JAVA_OPTS=-Xmx256m
 
 volumes:
   redis-data:
