--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-chess.allowed-origins=http://localhost:5173
+chess.allowed-origins=https://chess.cyannguyen.dev
 logging.level.root=INFO
-spring.data.redis.host=localhost
+spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
